# tinyflux

./: .coverage  .gitignore  .readthedocs.yml  LICENSE  MANIFEST.in  README.md  README.rst  benchmark2.py  mypy.ini  pyproject.toml  requirements.txt  setup.cfg
.github/workflows/: build.yml  coding_conventions_and_tests.yml  learn-github-actions.yml  publish-to-test-pypi.yml
docs/source/: changelog.rst  conf.py  contributing-basics.rst  contributing-guidelines.rst  contributing-philosophy.rst  contributing-tooling.rst  data-elements.rst  design-principles.rst  exploring-data.rst  getting-started.rst  index.rst  installing-tinyflux.rst  internals.rst  intro.rst  measurements.rst  preparing-data.rst  querying-data.rst  removing-data.rst  time.rst  tinyflux.rst  tips.rst  updating-data.rst  writing-data.rst
docs/source/_static/: style.css
examples/: 1_initializing_and_loading_new_db.ipynb  2_analytics_workflow.ipynb  3_iot_datastore_with_mqtt.py  4_backing_up_tinyflux_at_the_edge.py  README.rst  initializing_a_new_database.ipynb  iot_database.py  requirements.txt
examples/example_data/: cbsa_ca_2019.geojson  daily_aqi_by_cbsa_ca_2019-2020.csv
performance_tests/: README.md  benchmark.py  performance_results.json  requirements.txt  visualize_performance.py
source/: modules.rst  tests.rst  tinyflux.rst
tests/: __init__.py  conftest.py  test_index.py  test_measurement.py  test_point.py  test_queries.py  test_storages.py  test_tinyflux.py  test_utils.py
tinyflux/: __init__.py  database.py  decorators.py  index.py  measurement.py  point.py  queries.py  storages.py  utils.py  version.py
