[flake8]
max-line-length = 80
exclude = 
    .git,
    __pycache__,
    docs/**
extend-ignore = E203

[metadata]
name = tinyflux
version = attr: tinyflux.version.__version__
author = Justin Fung
author_email = justincaseyfung@gmail.com
description = The Tiny Time-Series Database Optimized for Your Happiness
long_description = file: README.rst
long_description_content_type = text/x-rst
url = https://github.com/citrusvanilla/tinyflux
project_urls =
    Documentation = https://tinyflux.readthedocs.io/en/latest/
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    Intended Audience :: System Administrators
    License :: OSI Approved :: MIT License
    Topic :: Database
    Topic :: Database :: Database Engines/Servers
    Topic :: Utilities
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: Python :: Implementation :: PyPy
    Operating System :: OS Independent
    Typing :: Typed

[options]
packages = tinyflux
python_requires = >=3.7

[options.package_data]
tinyflux = py.typed
